fix: bce-fab button align right

--- a/packages/core/src/components/bce-button/bce-button.fab.scss
+++ b/packages/core/src/components/bce-button/bce-button.fab.scss
@@ -12,6 +12,7 @@
 
   button {
     background-color: transparent;
+    text-align: right;
 
     bce-icon {
       @include elevate(2, false);
